--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,6 @@
 {
     "name": "mirthe/photogrid",
+    "version": "1.0",
     "description": "Shows photos from Flickr based on tag(s) or set ID",
     "homepage": "https://github.com/mirthe/kirby_photogrid",
     "keywords": ["kirby-plugin", "flickr", "photography", "grid"],
